Java 13 examples